--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=movie-crud-flask
-sonar.projectName=movie-crud-flask
-sonar.projectVersion=1.0
-sonar.projectBaseDir=.
-sonar.python.bandit.reportPaths=/report/banditResult.json
+sonar-scanner \
+  -Dsonar.projectKey=demo \
+  -Dsonar.sources=. \
+  -Dsonar.host.url=http://211.183.3.100:9000 \
+  -Dsonar.login=2a736fd2efd63a5de4f8499256a04362ba529e8b 
